Fix paths and layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -192,7 +192,7 @@ header .menu-icon {
   height: 200px;
   position: absolute;
   right: 30%;
-  bottom: 50%;
+  bottom: 20%;
 }
 
 .floating-icon-2 {
